--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       <div class="section-two">
         <h1 class="section-two__title">About me</h1>
         <p class="section-two__desc">
-          I'am a Senior Software developer at capgemini and I'm doinf MCA From
+          I'am a Senior Software developer at capgemini and I'm doing MCA From
           SRM Unversity in corres. I'm Intrested to learn fullsatck also so I'm
           pursuing that one in EMC.... Lorem ipsum dolor sit amet consectetur,
           adipisicing elit. Fugiat non iusto est dignissimos officiis illum
